feat: Refactor Authentication and Infrastructure
- Implemented AuthController, User entity, and JWT authentication flow.
- Added DatabaseSeeder default user creation.
- Extracted JwtAuthenticationSettings and WeatherApiSettings to separate files.
- Fixed Program.cs Service Registration for EnergyOptimizationService.
- Removed legacy MqttService and consolidated MQTT logic.
- Updated SmartHomeDbContext model references.
- Fixed Docker configuration (renamed docker-compose.yml).

--- a/Tests/NexusHome.IoT.Tests.csproj
+++ b/Tests/NexusHome.IoT.Tests.csproj
@@ -92,10 +92,7 @@
 
   <ItemGroup>
     <!-- Project references -->
-    <ProjectReference Include="../API/NexusHome.IoT.API.csproj" />
-    <ProjectReference Include="../Application/NexusHome.IoT.Application.csproj" />
-    <ProjectReference Include="../Core/NexusHome.IoT.Core.csproj" />
-    <ProjectReference Include="../Infrastructure/NexusHome.IoT.Infrastructure.csproj" />
+    <ProjectReference Include="..\NexusHome.IoT.csproj" />
   </ItemGroup>
 
   <ItemGroup>
