feat: Implement missing services, hubs, middleware and infrastructure

--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,16 @@
-# Environment sample for local/dev. Copy to .env and set real values.
-ASPNETCORE_ENVIRONMENT=Development
-
 # Database
-SQLSERVER_SA_PASSWORD=ChangeMeStrong!2025
-ConnectionStrings__DefaultConnection=Server=sqlserver;Database=NexusHomeIoT;User=sa;Password=${SQLSERVER_SA_PASSWORD};TrustServerCertificate=true;MultipleActiveResultSets=true
-
-# Redis
-REDIS_PASSWORD=ChangeMeStrong!2025
-ConnectionStrings__Redis=redis:6379,password=${REDIS_PASSWORD}
-
-# MQTT
-MqttBroker__Host=mqtt-broker
-MqttBroker__Port=1883
-MqttBroker__Username=nexususer
-MqttBroker__Password=ChangeMeStrong!2025
+DB_PASSWORD=SecurePassword123!
+SA_PASSWORD=SecurePassword123!
 
 # JWT
-JwtAuthentication__SecretKey=ChangeThisToARandomLongSecretValue
-JwtAuthentication__Issuer=NexusHome.IoT
-JwtAuthentication__Audience=NexusHome.Clients
+JWT_SECRET=super_secret_key_at_least_32_chars_long
+JWT_ISSUER=NexusHome
+JWT_AUDIENCE=NexusHomeUsers
+JWT_EXPIRY=60
 
-# Weather API (optional)
-WEATHER_API_KEY=
+# MQTT
+MQTT_USER=mqtt_user
+MQTT_PASSWORD=mqtt_password
+
+# External APIs
+OPENWEATHER_API_KEY=your_api_key_here
