fix: Add Docker security improvements and environment configuration
- Create comprehensive .env.example with all required variables
- Remove hardcoded credentials from docker-compose.yml
- Add docker-compose.override.yml for local development
- Document all environment variables with secure defaults
- Add validation for required configuration at startup
- Addresses Issue #15 (Security vulnerabilities)
- Addresses Issue #14 (Missing environment configuration)

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,59 @@
-# Database
-DB_PASSWORD=SecurePassword123!
-SA_PASSWORD=SecurePassword123!
+# NexusHome IoT Platform - Environment Configuration
+# Copy this file to .env and update with your actual values
 
-# JWT
-JWT_SECRET=super_secret_key_at_least_32_chars_long
-JWT_ISSUER=NexusHome
-JWT_AUDIENCE=NexusHomeUsers
-JWT_EXPIRY=60
+# Application Environment
+ASPNETCORE_ENVIRONMENT=Development
+ASPNETCORE_URLS=http://+:8080
 
-# MQTT
-MQTT_USER=mqtt_user
-MQTT_PASSWORD=mqtt_password
+# Database Configuration
+ConnectionStrings__DefaultConnection=Server=sqlserver,1433;Database=NexusHomeIoT;User=sa;Password=CHANGE_ME_STRONG_PASSWORD;TrustServerCertificate=true;MultipleActiveResultSets=true
+SQLSERVER_SA_PASSWORD=CHANGE_ME_STRONG_PASSWORD
+
+# Redis Configuration
+ConnectionStrings__Redis=redis:6379,password=CHANGE_ME_REDIS_PASSWORD
+REDIS_PASSWORD=CHANGE_ME_REDIS_PASSWORD
+
+# MQTT Broker Configuration
+MqttBroker__Host=mqtt-broker
+MqttBroker__Port=1883
+MqttBroker__Username=nexususer
+MqttBroker__Password=CHANGE_ME_MQTT_PASSWORD
+MqttBroker__ClientId=NexusHome-Server
+MqttBroker__TopicPrefix=nexushome
+
+# JWT Authentication
+# Generate a secure 256-bit key: openssl rand -base64 32
+JwtAuthentication__SecretKey=GENERATE_RANDOM_256_BIT_KEY_HERE_USE_OPENSSL_RAND_BASE64_32
+JwtAuthentication__Issuer=NexusHome.IoT
+JwtAuthentication__Audience=NexusHome.Clients
+JwtAuthentication__ExpirationMinutes=60
 
 # External APIs
-OPENWEATHER_API_KEY=your_api_key_here
+WEATHER_API_KEY=your_openweathermap_api_key_here
+
+# Logging Configuration
+Seq__ServerUrl=http://seq:5341
+Seq__ApiKey=optional_api_key_for_seq
+
+# InfluxDB Configuration (Time Series Database)
+InfluxDB__Url=http://influxdb:8086
+InfluxDB__Token=CHANGE_ME_INFLUXDB_TOKEN
+InfluxDB__Organization=NexusHome
+InfluxDB__Bucket=iot-telemetry
+
+# Grafana Configuration
+GF_SECURITY_ADMIN_USER=admin
+GF_SECURITY_ADMIN_PASSWORD=CHANGE_ME_GRAFANA_PASSWORD
+
+# Application Settings
+App__EnableSwagger=true
+App__EnableDetailedErrors=false
+App__MaxDevicesPerUser=50
+App__TelemetryRetentionDays=90
+
+# Rate Limiting
+RateLimit__PermitLimit=100
+RateLimit__WindowSeconds=60
+
+# CORS Settings (comma-separated origins)
+CORS__AllowedOrigins=http://localhost:3000,http://localhost:5173
